--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,11 @@
     "react-icons": "4.9.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.2",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "tailwindcss": "^3.3.3",
     "typescript": "4.1.3"
   },
   "scripts": {
