--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "bulma": "^0.9.4",
@@ -14,7 +15,7 @@
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-hooks-global-state": "^2.1.0",
-    "react-icons": "4.9.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1"
