--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,11 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "bulma": "^0.9.4",
     "bulma-extensions": "^6.2.7",
+    "mapbox-gl": "^2.15.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
