--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,21 @@
     "axios": "^1.4.0",
     "bulma": "^0.9.4",
     "bulma-extensions": "^6.2.7",
-    "mapbox-gl": "^2.15.0",
+    "leaflet": "^1.9.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
+    "react-geocode": "^1.0.0-alpha.0",
     "react-hooks-global-state": "^2.1.0",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/runtime": "7.13.8",
     "tailwindcss": "^3.3.3",
     "typescript": "4.1.3"
