Better marker pointing on the map fix matching children to parent issue, add locate child feature

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "bulma": "^0.9.4",
     "bulma-extensions": "^6.2.7",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
@@ -18,6 +19,7 @@
     "react-hooks-global-state": "^2.1.0",
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.4",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1"
