--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bulma-extensions": "^6.2.7",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "leaflet-geosearch": "^3.10.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-datepicker": "^4.11.0",
