--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
     "@mui/x-date-pickers": "^6.16.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "bulma": "^0.9.4",
     "bulma-extensions": "^6.2.7",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
@@ -34,6 +33,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/runtime": "7.13.8",
+    "tailwindcss": "^3.4.1",
     "typescript": "4.1.3"
   },
   "scripts": {
