--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
+    "react-spring-bottom-sheet": "^3.4.1",
     "react-time-picker": "^6.5.2"
   },
   "devDependencies": {
