--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "leaflet-geosearch": "^3.10.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
+    "react-code-input": "^3.10.1",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-geocode": "^1.0.0-alpha.0",
