--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
 REACT_APP_linkNgrok=https://childtrackr-backend-production.up.railway.app
+REACT_APP_ENV=development
+REACT_APP_API_URL=http://34.86.158.248:8080/
