--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^5.14.15",
     "@mui/x-date-pickers": "^6.16.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^5.28.0",
     "axios": "^1.4.0",
     "bulma-extensions": "^6.2.7",
     "dayjs": "^1.11.10",
