--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,9 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "react-spring-bottom-sheet": "^3.4.1",
-    "react-time-picker": "^6.5.2"
+    "react-time-picker": "^6.5.2",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
