--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-geocode": "^1.0.0-alpha.0",
     "react-hooks-global-state": "^2.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
