--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 REACT_APP_linkNgrok=https://childtrackr-backend-production.up.railway.app
 REACT_APP_ENV=development
 REACT_APP_API_URL=http://34.86.158.248:8080/
+REACT_APP_NOMINATIM_BASE_URL=https://nominatim.openstreetmap.org/search?
