--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "leaflet-draw": "^1.0.4",
     "leaflet-geosearch": "^3.10.2",
     "moment": "^2.29.4",
+    "node-geocoder": "^4.3.0",
     "react": "18.2.0",
     "react-code-input": "^3.10.1",
     "react-datepicker": "^4.11.0",
