--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "^5.14.15",
     "@mui/x-date-pickers": "^6.16.3",
+    "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^5.28.0",
     "axios": "^1.4.0",
