feat-GoogleMapsSearchBox basic

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REACT_APP_ENV=development
 REACT_APP_API_URL=http://34.86.158.248:8080/
 REACT_APP_NOMINATIM_BASE_URL=https://nominatim.openstreetmap.org/search?
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyCyqZ5HO1H1FcwYPUQFvV0ez23_rnLjioc
+REACT_APP_GOOGLE_MAPS_API_KEY_PLACE=AIzaSyABX4LTqTLQGg_b3jFOH8Z6_H5CDqn8tbc
