--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-REACT_APP_ENV=development/production
+REACT_APP_ENV=development
 REACT_APP_API_URL=
 REACT_APP_NOMINATIM_BASE_URL=
+REACT_APP_GOOGLE_MAPS_API_KEY=
+REACT_APP_GOOGLE_MAPS_API_KEY_PLACE=
+REACT_APP_REALM_APP_ID=
