--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-scripts": "^5.0.1",
     "react-spring-bottom-sheet": "^3.4.1",
     "react-time-picker": "^6.5.2",
+    "realm-web": "^2.0.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9"
   },
