--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "react-spring-bottom-sheet": "^3.4.1",
     "react-time-picker": "^6.5.2",
     "realm-web": "^2.0.0",
     "redux": "^4.2.1",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
