--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^5.28.0",
+    "@yudiel/react-qr-scanner": "^2.0.4",
     "axios": "^1.4.0",
     "bulma-extensions": "^6.2.7",
     "dayjs": "^1.11.10",
