--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "leaflet-geosearch": "^3.10.2",
     "moment": "^2.29.4",
     "node-geocoder": "^4.3.0",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-code-input": "^3.10.1",
     "react-datepicker": "^4.11.0",
