--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "realm-web": "^2.0.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
